--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,69 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-10.44MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-5.14MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-342.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-521.2KB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-2.28MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 塞浦路斯-2.13MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇨🇳 中国-6.89MB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇨🇳 中国-6.66MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
   - {name: 🇭🇰 香港-308.0KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
-  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-910.7KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.20MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: 154.17.28.38, port: 49353, type: vmess, uuid: f762694a-948b-4918-a657-6ca9b10f2d32, alterId: 233, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -75,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.44MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-342.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-521.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.28MB/s(Youtube:不良林)
+      - 塞浦路斯-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-308.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-910.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
