--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-581.2KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.77MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇯🇵 日本-196.0KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-6.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 444, type: vmess, uuid: ea43d5df-84ec-3a33-b625-6c08ff6ece57, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp04-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
-  - {name: 🇭🇰 香港-604.1KB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.12MB/s(Youtube:不良林), server: 164.92.99.255, port: 4649, type: ss, cipher: aes-256-gcm, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
-  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-7.70MB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 塞浦路斯-338.5KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇨🇳 中国-5.77MB/s(Youtube:不良林), server: v2hk3-ws-tls.ytv2line.top, port: 48203, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2hk3-ws-tls.ytv2line.top}}
   - {name: 🇩🇪 德国-314.1KB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
+  - {name: 🇨🇳 中国-310.8KB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
+  - {name: 🇸🇬 新加坡-431.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-4.85MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-443.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-7.13MB/s(Youtube:不良林), server: 29d78fe.pi.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.pi.gladns.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-581.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-604.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.70MB/s(Youtube:不良林)
+      - 塞浦路斯-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
       - 🇩🇪 德国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-431.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-581.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-604.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.70MB/s(Youtube:不良林)
+      - 塞浦路斯-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
       - 🇩🇪 德国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-431.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-581.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-604.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.70MB/s(Youtube:不良林)
+      - 塞浦路斯-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
       - 🇩🇪 德国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-431.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-604.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-581.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-604.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.70MB/s(Youtube:不良林)
+      - 塞浦路斯-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
       - 🇩🇪 德国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-431.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-581.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-604.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.70MB/s(Youtube:不良林)
+      - 塞浦路斯-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
       - 🇩🇪 德国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-431.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-581.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-604.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.70MB/s(Youtube:不良林)
+      - 塞浦路斯-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
       - 🇩🇪 德国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-431.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-581.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-196.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-604.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.70MB/s(Youtube:不良林)
+      - 塞浦路斯-338.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
       - 🇩🇪 德国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-431.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-443.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
